==> I-SYST/EHAL/ARM/Nordic/src/nrf5x_uart.c <==
#include <string.h>
#include <stdio.h>
#include <stdint.h>
#include <stdarg.h>
#include "nrf51_bitfields.h"
#include "nrf51.h"
#include "nrf_gpio.h"
#include "istddef.h"
#include "nrf5x_uart.h"
#include "idelay.h"
#define NRF51UART_FIFO_MAX		6
#define NRF51UART_RXTIMEOUT		15
#define NRFUART_CFIFO_SIZE		(16 + sizeof(CFIFOHDL))

bool UARTInit(UARTDEV *pDev, const UARTCFG *pCfg)
{
//	NRFUARTDEV *dev = (NRFUARTDEV*)pDev->SerIntrf.pDevData;
	// Config I/O pins

	if (pCfg->pRxMem && pCfg->RxMemSize > 0)
	{
		pDev->hRxFifo = CFifoInit(pCfg->pRxMem, pCfg->RxMemSize, 1);
	}
	else
	{
		pDev->hRxFifo = CFifoInit(s_nRFUARTRxFifoMem, NRFUART_CFIFO_SIZE, 1);
	}

	if (pCfg->pTxMem && pCfg->TxMemSize > 0)
	{
		pDev->hTxFifo = CFifoInit(pCfg->pTxMem, pCfg->TxMemSize, 1);
	}
	else
	{
		pDev->hTxFifo = CFifoInit(s_nRFUARTTxFifoMem, NRFUART_CFIFO_SIZE, 1);
	}

	NRF_GPIO->OUTSET = (1 << pCfg->PinCfg[UARTPIN_TX_IDX].PinNo);
	IOPinCfg(pCfg->PinCfg, UART_NB_PINS);
//    nrf_gpio_pin_set(pCfg->PinCfg[UARTPIN_TX_IDX].PinNo);
//    nrf_gpio_cfg_output(pCfg->PinCfg[UARTPIN_TX_IDX].PinNo);
//    nrf_gpio_cfg_input(pCfg->PinCfg[UARTPIN_RX_IDX].PinNo, NRF_GPIO_PIN_PULLUP);

	pDev->SerIntrf.pDevData = &s_nRFUartDev;
	s_nRFUartDev.pUartDev = pDev;

	//NRF_UART0->POWER = UART_POWER_POWER_Enabled << UART_POWER_POWER_Pos;

    NRF_UART0->PSELRXD = pCfg->PinCfg[UARTPIN_RX_IDX].PinNo;
	NRF_UART0->PSELTXD = pCfg->PinCfg[UARTPIN_TX_IDX].PinNo;

    // Set baud
    pDev->Rate = nRFUARTSetRate(&pDev->SerIntrf, pCfg->Rate);

    NRF_UART0->CONFIG &= ~(UART_CONFIG_PARITY_Msk << UART_CONFIG_PARITY_Pos);
	if (pCfg->Parity == UART_PARITY_NONE)
	{
		NRF_UART0->CONFIG |= UART_CONFIG_PARITY_Excluded << UART_CONFIG_PARITY_Pos;
	}
	else
	{
		NRF_UART0->CONFIG |= UART_CONFIG_PARITY_Included << UART_CONFIG_PARITY_Pos;
	}

    NRF_UART0->ENABLE = (UART_ENABLE_ENABLE_Enabled << UART_ENABLE_ENABLE_Pos);
    NRF_UART0->EVENTS_RXDRDY = 0;
    NRF_UART0->EVENTS_TXDRDY = 0;
    NRF_UART0->EVENTS_ERROR = 0;
    NRF_UART0->ERRORSRC = NRF_UART0->ERRORSRC;
    NRF_UART0->EVENTS_CTS = 0;

    if (pCfg->FlowControl == UART_FLWCTRL_HW)
	{
		NRF_UART0->CONFIG |= (UART_CONFIG_HWFC_Enabled << UART_CONFIG_HWFC_Pos);
		NRF_UART0->PSELCTS = pCfg->PinCfg[UARTPIN_CTS_IDX].PinNo;
		NRF_UART0->PSELRTS = pCfg->PinCfg[UARTPIN_RTS_IDX].PinNo;
		NRF_GPIO->OUTCLR = (1 << pCfg->PinCfg[UARTPIN_CTS_IDX].PinNo);
		NRF_GPIO->OUTCLR = (1 << pCfg->PinCfg[UARTPIN_RTS_IDX].PinNo);
        // Setup the gpiote to handle pin events on cts-pin.
        // For the UART we want to detect both low->high and high->low transitions in order to
        // know when to activate/de-activate the TX/RX in the UART.
        // Configure pin.
//        nrf_drv_gpiote_in_config_t cts_config = GPIOTE_CONFIG_IN_SENSE_TOGGLE(false);
//        nrf_drv_gpiote_in_init(p_comm_params->cts_pin_no, &cts_config, gpiote_uart_event_handler);
	}
	else
	{
		NRF_UART0->CONFIG &= ~(UART_CONFIG_HWFC_Enabled << UART_CONFIG_HWFC_Pos);
		NRF_UART0->PSELRTS = -1;
		NRF_UART0->PSELCTS = -1;
	}


    s_nRFUartDev.RxPin = pCfg->PinCfg[UARTPIN_RX_IDX].PinNo;
    s_nRFUartDev.TxPin = pCfg->PinCfg[UARTPIN_TX_IDX].PinNo;
	s_nRFUartDev.CtsPin = pCfg->PinCfg[UARTPIN_CTS_IDX].PinNo;
	s_nRFUartDev.RtsPin = pCfg->PinCfg[UARTPIN_RTS_IDX].PinNo;
	s_nRFUartDev.bRxReady = false;
	s_nRFUartDev.bTxReady = true;

	pDev->DataBits = pCfg->DataBits;
	pDev->FlowControl = pCfg->FlowControl;
	pDev->StopBits = pCfg->StopBits;
	pDev->bIrDAFixPulse = pCfg->bIrDAFixPulse;
	pDev->bIrDAInvert = pCfg->bIrDAInvert;
	pDev->bIrDAMode = pCfg->bIrDAMode;
	pDev->IrDAPulseDiv = pCfg->IrDAPulseDiv;
	pDev->Parity = pCfg->Parity;
	pDev->bIntMode = pCfg->bIntMode;
	pDev->EvtCallback = pCfg->EvtCallback;
	pDev->SerIntrf.Disable = nRFUARTDisable;
	pDev->SerIntrf.Enable = nRFUARTEnable;
	pDev->SerIntrf.GetRate = nRFUARTGetRate;
	pDev->SerIntrf.SetRate = nRFUARTSetRate;
	pDev->SerIntrf.StartRx = nRFUARTStartRx;
	pDev->SerIntrf.RxData = nRFUARTRxData;
	pDev->SerIntrf.StopRx = nRFUARTStopRx;
	pDev->SerIntrf.StartTx = nRFUARTStartTx;
	pDev->SerIntrf.TxData = nRFUARTTxData;
	pDev->SerIntrf.StopTx = nRFUARTStopTx;

    NRF_UART0->TASKS_STARTTX = 1;
    NRF_UART0->TASKS_STARTRX = 1;


/*    usDelay(10000);
    NRF_UART0->EVENTS_RXDRDY = 0;
    NRF_UART0->EVENTS_TXDRDY = 0;
    NRF_UART0->EVENTS_CTS = 0;
    NRF_UART0->EVENTS_NCTS = 0;
    NRF_UART0->EVENTS_RXTO = 0;
    NRF_UART0->EVENTS_ERROR = 0;*/

    NRF_UART0->INTENCLR = 0xffffffffUL;

	if (pCfg->bIntMode)
	{
		NRF_UART0->INTENSET = (UART_INTENSET_RXDRDY_Set << UART_INTENSET_RXDRDY_Pos) |
						  (UART_INTENSET_RXTO_Set << UART_INTENSET_RXTO_Pos) |
						  (UART_INTENSET_TXDRDY_Set << UART_INTENSET_TXDRDY_Pos) |
						  (UART_INTENSET_ERROR_Set << UART_INTENSET_ERROR_Pos) |
						  (UART_INTENSET_CTS_Set << UART_INTENSET_CTS_Pos) |
						  (UART_INTENSET_NCTS_Set << UART_INTENSET_NCTS_Pos);

		NVIC_ClearPendingIRQ(UART0_IRQn);
		NVIC_SetPriority(UART0_IRQn, pCfg->IntPrio);
		NVIC_EnableIRQ(UART0_IRQn);
    }

	//NRF_UART0->TASKS_STARTTX = 1;
    uint8_t d = NRF_UART0->RXD;	// Dummy read
	return true;
}

void nRFUARTDisable(SERINTRFDEV *pDev)
{
	NRFUARTDEV *dev = (NRFUARTDEV *)pDev->pDevData;

	dev->pReg->TASKS_STOPRX = 1;
	dev->pReg->TASKS_STOPTX = 1;

	dev->pReg->PSELRXD = -1;
	dev->pReg->PSELTXD = -1;
	dev->pReg->PSELRTS = -1;
	dev->pReg->PSELCTS = -1;

	dev->pReg->ENABLE  &= ~(UART_ENABLE_ENABLE_Enabled << UART_ENABLE_ENABLE_Pos);
}

void nRFUARTEnable(SERINTRFDEV *pDev)
{
	NRFUARTDEV *dev = (NRFUARTDEV *)pDev->pDevData;

	dev->pReg->PSELRXD = dev->RxPin;
	dev->pReg->PSELTXD = dev->TxPin;
	dev->pReg->PSELCTS = dev->CtsPin;
	dev->pReg->PSELRTS = dev->RtsPin;

	dev->pReg->ENABLE  |= (UART_ENABLE_ENABLE_Enabled << UART_ENABLE_ENABLE_Pos);
	dev->pReg->TASKS_STARTRX = 1;
	dev->pReg->TASKS_STARTTX = 1;
}
